<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
                android:id="@+id/home"
                android:icon="@drawable/ic_home"
                android:title="@string/home"
                />
        
        <item
                android:id="@+id/search"
                android:icon="@drawable/ic_trending"
                android:title="@string/trending"
                />
        <item
                android:id="@+id/subscriptions"
                android:icon="@drawable/ic_subscriptions"
                android:title="@string/subscriptions"
                />
        <item
                android:id="@+id/inbox"
                android:icon="@drawable/ic_inbox"
                android:title="@string/inbox"
                />
        <item
                android:id="@+id/library"
                android:icon="@drawable/ic_library"
                android:title="@string/library"
                />


</menu>