<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?attr/bgColor"
        xmlns:android="http://schemas.android.com/apk/res/android" >
        
        
        <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        
        
                <include
                        layout="@layout/toolbar_layout"/>

        </android.support.design.widget.AppBarLayout>
        
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                >
                
                
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_history_black"
                        android:layout_marginEnd="24dp"
                        android:layout_gravity="center"
                        android:tint="?attr/iconColor"
                        />
                
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/history"
                        android:textColor="?attr/textColor"
                        android:textSize="16sp"
                        android:layout_gravity="center"
                        />
                
                
        </LinearLayout>
        
        
        
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                >
                
                
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_file_downloads"
                        android:layout_marginEnd="24dp"
                        android:layout_gravity="center"
                        android:tint="?attr/iconColor"
                        />
                
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/downloads"
                        android:textColor="?attr/textColor"
                        android:textSize="16sp"
                        android:layout_gravity="center"
                        />
        
        
        </LinearLayout>
        
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                >
        
        
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="24dp"
                        android:tint="?attr/iconColor"
                        android:src="@drawable/ic_video_library_black_24dp" />
                
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_videos"
                        android:textColor="?attr/textColor"
                        android:textSize="16sp"
                        android:layout_gravity="center"
                        />
        
        
        </LinearLayout>
        
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                >
                
                
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_purchases"
                        android:layout_marginEnd="24dp"
                        android:layout_gravity="center"
                        android:tint="?attr/iconColor"
                        />
                
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/purchases"
                        android:textColor="?attr/textColor"
                        android:textSize="16sp"
                        />
        
        
        </LinearLayout>
        
        
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                >
                
                
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_watch_later"
                        android:layout_marginEnd="24dp"
                        android:layout_gravity="center"
                        android:tint="?attr/iconColor"
                        />
                
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/watch_later"
                        android:textColor="?attr/textColor"
                        android:textSize="16sp"
                        android:layout_gravity="center"
                        />
        
        
        </LinearLayout>



</LinearLayout>